<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_play">Play</string>
    <string name="action_scan_directory">Scan directory</string>
    <string name="action_share">Share</string>
    <string name="action_sort_order">Sort order</string>
    <string name="album">Album</string>
    <string name="album_count">Album count</string>
    <string name="albums">Albums</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="artists_symbol">%1d Albums, %2d Songs</string>
    <string name="audio_file_sharing">Audio file sharing</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="audio_image_sharing">Share image audio file</string>
    <string name="could_not_scan_files">Could not scan %d files.</string>
    <string name="currently_listening_to_x_by_x">Currently listening to %1$s by %2$s.</string>
    <string name="date_added">Date Added</string>
    <string name="date_modified">Date modified</string>
    <string name="delete_song">Delete the song</string>
    <string name="delete_song_x">Delete the song &lt;b&gt;%1$s&lt;/b&gt;?</string>
    <string name="delete_songs">Delete songs</string>
    <string name="delete_x_songs">Delete &lt;b&gt;%1$d&lt;/b&gt; songs?</string>
    <string name="dismiss">Dismiss</string>
    <string name="duration">Duration</string>
    <string name="empty">Empty</string>
    <string name="equalizer">Equalizer</string>
    <string name="error_label">Error</string>
    <string name="error_symbol">Error: %s</string>
    <string name="genre">Genre</string>
    <string name="genres">Genres</string>
    <string name="grant">Grant</string>
    <string name="invert_selection">Invert selection</string>
    <string name="label_bitrate">Bitrate</string>
    <string name="label_file_format">Format</string>
    <string name="label_file_name">File name</string>
    <string name="label_file_path">File path</string>
    <string name="label_file_size">File Size</string>
    <string name="label_sampling_rate">Sampling rate</string>
    <string name="maximum_share_reached">You cannot share this much content at once</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="no_albums">You have no albums</string>
    <string name="no_app_found">No valid app found</string>
    <string name="no_artists">You have no artists</string>
    <string name="no_audio_ID">Play a song first, then try again.</string>
    <string name="no_equalizer">No equalizer found.</string>
    <string name="no_results_found">No results found</string>
    <string name="no_songs">You have no songs</string>
    <string name="nothing_to_scan">Nothing to scan.</string>
    <string name="now_playing_queue">Now playing queue</string>
    <string name="on_close_activity">Stop playback ?</string>
    <string name="permission_storage_denied">Permission to access storage denied.</string>
    <string name="play_all">Play all</string>
    <string name="play_pause">Play / Pause</string>
    <string name="playback_pitch">Pitch</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="playing">Playing</string>
    <string name="playing_notification_description">The playing notification has options for play/pause etc.</string>
    <string name="playing_notification_name">Playing notification</string>
    <string name="previous">Previous</string>
    <string name="recheck_library">Recheck the library</string>
    <string name="repeat_all">Repeat all turned on</string>
    <string name="repeat_off">Replay turned off</string>
    <string name="repeat_song">Repeat the current song</string>
    <string name="reset_action">Reset</string>
    <string name="save">Save</string>
    <string name="scanned_files">Scanned %1$d of %2$d files.</string>
    <string name="scanning">Scanning…</string>
    <string name="search">Search</string>
    <string name="select_all">Select All</string>
    <string name="set_as_ringtone">Set as ringtone</string>
    <string name="set_as_ringtone_symbol">Set %1$s as your ringtone.</string>
    <string name="set_cover_mode">Album covers</string>
    <string name="set_cover_mode_media_store">Fast</string>
    <string name="set_cover_mode_off">Off</string>
    <string name="set_cover_mode_quality">High quality</string>
    <string name="set_ringtone">Set ringtone</string>
    <string name="set_ringtone_message">Allow the My Music Player app to change the sound settings</string>
    <string name="settings">"Settings"</string>
    <string name="shuffle">Shuffle</string>
    <string name="shuffle_disabled">Random play disabled</string>
    <string name="shuffle_enabled">Random play is activated</string>
    <string name="song_count">Song count</string>
    <string name="songs">Songs</string>
    <plurals name="songs_plural">
        <item quantity="one">%d Song</item>
        <item quantity="other">%d Songs</item>
    </plurals>
    <string name="stop_playback_after_curr_song">Stop playback after the current song</string>
    <string name="theme_auto_title">System</string>
    <string name="theme_dark_title">Dark</string>
    <string name="theme_light_title">Light</string>
    <string name="theme_title">Theme</string>
    <string name="title">Title</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="unplayable_file">Couldn\'t play this song.</string>
    <string name="usb_device">USB device</string>
    <string name="usb_device_not_found">USB device not found</string>
    <string name="what_do_you_want_to_share">What do you want to share?</string>
    <string name="year">Year</string>
    <string name="yes">Yes</string>
</resources>