<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_order_by"
        android:icon="@drawable/ic_sort"
        android:title="@string/order_by"
        app:showAsAction="ifRoom" />
    <group android:id="@+id/order_group">
        <item
            android:id="@+id/action_recheck_library"
            android:title="@string/recheck_library" />
        <item
            android:id="@+id/action_usb_otg"
            android:title="@string/usb_device" />
        <item
            android:id="@+id/action_settings"
            android:title="@string/settings">
            <menu>
                <item
                    android:id="@+id/action_album_covers"
                    android:title="@string/set_cover_mode" />
            </menu>
        </item>
    </group>
</menu>