<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ringtone"
        android:icon="@drawable/ic_phone"
        android:title="@string/set_as_ringtone"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_details"
        android:icon="@drawable/ic_info_outline"
        android:title="@string/action_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove_file"
        android:icon="@drawable/ic_trash"
        android:title="@string/action_delete_from_device"
        app:showAsAction="never" />
</menu>