<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".activities.PlayerActivity">
    
    <androidx.cardview.widget.CardView
        android:id="@+id/playback_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/playback_toolbar"
            style="@style/Widget.Audio.Toolbar.Icon"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIconTint="@color/widgets_color"
            app:title="@string/playing"
            app:titleCentered="true" />
    </androidx.cardview.widget.CardView>
    
    <com.mohammadkk.mymusicplayer.ui.MusicImageView
        android:id="@+id/playback_cover"
        style="@style/Widget.Audio.Image.Full"
        android:layout_margin="@dimen/spacing_medium"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/playback_song"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playback_card"
        tools:src="@tools:sample/backgrounds/scenic" />
    
    <TextView
        android:id="@+id/playback_song"
        style="@style/Widget.Audio.TextView.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        app:layout_constraintBottom_toTopOf="@+id/playback_artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Song Name" />
    
    <TextView
        android:id="@+id/playback_artist"
        style="@style/Widget.Audio.TextView.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        app:layout_constraintBottom_toTopOf="@+id/playback_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Artist Name" />
    
    <LinearLayout
        android:id="@+id/playback_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/playback_seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        
        <TextView
            android:id="@+id/playback_album"
            style="@style/Widget.Audio.TextView.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_tiny"
            android:layout_weight="1"
            tools:text="Album Name" />
        
        <TextView
            android:id="@+id/playback_count"
            style="@style/Widget.Audio.TextView.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_500"
            tools:text="5 / 15" />
    </LinearLayout>
    
    <com.mohammadkk.mymusicplayer.ui.MusicSeekBar
        android:id="@+id/playback_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_mid_medium"
        app:layout_constraintBottom_toTopOf="@+id/playback_play_pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
    
    <ImageButton
        android:id="@+id/playback_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:background="@drawable/round_selector"
        android:contentDescription="@string/repeat_off"
        android:padding="@dimen/spacing_mid_medium"
        android:src="@drawable/ic_repeat"
        app:layout_constraintBottom_toBottomOf="@+id/playback_skip_prev"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playback_skip_prev" />
    
    <ImageButton
        android:id="@+id/playback_skip_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_selector"
        android:contentDescription="@string/previous"
        android:padding="@dimen/spacing_mid_medium"
        android:src="@drawable/ic_skip_previous"
        app:layout_constraintBottom_toBottomOf="@+id/playback_play_pause"
        app:layout_constraintLeft_toRightOf="@+id/playback_repeat"
        app:layout_constraintRight_toLeftOf="@+id/playback_play_pause"
        app:layout_constraintTop_toTopOf="@+id/playback_play_pause" />
    
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/playback_play_pause"
        style="@style/Widget.Audio.FloatingActionButton.PlayPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:contentDescription="@string/play_pause"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    
    <ImageButton
        android:id="@+id/playback_skip_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_selector"
        android:contentDescription="@string/next"
        android:padding="@dimen/spacing_mid_medium"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_skip_next"
        app:layout_constraintBottom_toBottomOf="@+id/playback_play_pause"
        app:layout_constraintLeft_toRightOf="@+id/playback_play_pause"
        app:layout_constraintRight_toLeftOf="@+id/playback_shuffle"
        app:layout_constraintTop_toTopOf="@+id/playback_play_pause" />
    
    <ImageButton
        android:id="@+id/playback_shuffle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:background="@drawable/round_selector"
        android:contentDescription="@string/shuffle_disabled"
        android:padding="@dimen/spacing_mid_medium"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_shuffle"
        app:layout_constraintBottom_toBottomOf="@+id/playback_skip_next"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playback_skip_next" />

</androidx.constraintlayout.widget.ConstraintLayout>